publish: Revert "attempt to fix IE mobile x overflow issue"
generated from commit 2e53b840e7d333b479830e9a8235ccbf9f99908e

--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,6 @@ body {
     color: #666;
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
-    overflow-x: hidden;
 }
 
 h1 {
